feat(api): stale-image block (-image-block-after, 409 IMAGE_STALE) + imageEngines view (V3.3, WIP)
